# serializer version: 1
# name: test_update[load_platforms0][update.bedroom_bedroom_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'update.bedroom_bedroom_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Firmware',
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'BBZZBBZZ-fw_ver_available',
    'unit_of_measurement': None,
  })
# ---
# name: test_update[load_platforms0][update.bedroom_bedroom_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/sensibo/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'PUR00111',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: 'PUR00111',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 0>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'pure',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.bedroom_bedroom_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_update[load_platforms0][update.hallway_hallway_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'update.hallway_hallway_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Firmware',
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ABC999111-fw_ver_available',
    'unit_of_measurement': None,
  })
# ---
# name: test_update[load_platforms0][update.hallway_hallway_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/sensibo/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hallway Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'SKY30046',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: 'SKY30048',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 0>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'skyv2',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.hallway_hallway_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update[load_platforms0][update.kitchen_kitchen_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'update.kitchen_kitchen_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Firmware',
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AAZZAAZZ-fw_ver_available',
    'unit_of_measurement': None,
  })
# ---
# name: test_update[load_platforms0][update.kitchen_kitchen_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/sensibo/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Kitchen Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: 'PUR00111',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: 'PUR00111',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 0>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'pure',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.kitchen_kitchen_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
